@@ -11,11 +11,19 @@ def mangle(**keywords):
     mangleQuery(keywords)
     return keywords
 
+class Query:
+    def __init__(self, query, range=None, operator=None, depth=None):
+        self.query = query
+        self.range = range
+        self.operator = operator
+        self.depth = depth
 
 class QueryManglerTests(TestCase):
 
     def testPassUnknownArguments(self):
         keywords = mangle(foo=23, bar=42)
+        self.assertEqual(keywords, {'foo': 23, 'bar': 42})
+        keywords = mangle(foo=Query(23), bar=Query(42))
         self.assertEqual(keywords, {'foo': 23, 'bar': 42})
 
     def testComplainAboutUnknownUsages(self):
@@ -27,6 +35,8 @@ class QueryManglerTests(TestCase):
         self.assertEqual(keywords, {'foo': '"[23 TO *]"'})
         keywords = mangle(foo=dict(query=(23,), range='min'))
         self.assertEqual(keywords, {'foo': '"[23 TO *]"'})
+        keywords = mangle(foo=Query(query=(23,), range='min'))
+        self.assertEqual(keywords, {'foo': '"[23 TO *]"'})
 
     def testMaxRange(self):
         keywords = mangle(foo=(23,), foo_usage='range:max')
@@ -35,14 +45,20 @@ class QueryManglerTests(TestCase):
         self.assertEqual(keywords, {'foo': '"[* TO 23]"'})
         keywords = mangle(foo=dict(query=23, range='max'))
         self.assertEqual(keywords, {'foo': '"[* TO 23]"'})
+        keywords = mangle(foo=Query(query=23, range='max'))
+        self.assertEqual(keywords, {'foo': '"[* TO 23]"'})
 
     def testMinMaxRange(self):
         keywords = mangle(foo=(23,42), foo_usage='range:min:max')
         self.assertEqual(keywords, {'foo': '"[23 TO 42]"'})
         keywords = mangle(foo=dict(query=(23,42), range='min:max'))
         self.assertEqual(keywords, {'foo': '"[23 TO 42]"'})
+        keywords = mangle(foo=Query(query=(23,42), range='min:max'))
+        self.assertEqual(keywords, {'foo': '"[23 TO 42]"'})
 
     def testDateConversion(self):
+        keywords = mangle(foo=DateTime('1970/02/01'))
+        self.assertEqual(keywords, {'foo': '1970-01-31T23:00:00.000Z'})
         day = DateTime('1972/05/11 UTC')
         keywords = mangle(foo=day)
         self.assertEqual(keywords, {'foo': '1972-05-11T00:00:00.000Z'})
@@ -61,12 +77,19 @@ class QueryManglerTests(TestCase):
         self.assertEqual(keywords, {'foo': '"(23 OR 42)"'})
         keywords = mangle(foo=dict(query=(23,42), operator='or'))
         self.assertEqual(keywords, {'foo': '"(23 OR 42)"'})
+        keywords = mangle(foo=Query(query=(23,42), operator='or'))
+        self.assertEqual(keywords, {'foo': '"(23 OR 42)"'})
         keywords = mangle(foo=(23,42), foo_usage='operator:and')
         self.assertEqual(keywords, {'foo': '"(23 AND 42)"'})
         keywords = mangle(foo=dict(query=(23,42), operator='and'))
         self.assertEqual(keywords, {'foo': '"(23 AND 42)"'})
+        keywords = mangle(foo=Query(query=(23,42), operator='and'))
+        self.assertEqual(keywords, {'foo': '"(23 AND 42)"'})
         day = DateTime('1972/05/11 UTC')
         keywords = mangle(foo=dict(query=(day, day + 7), operator='or'))
+        self.assertEqual(keywords, {'foo':
+            '"(1972-05-11T00:00:00.000Z OR 1972-05-18T00:00:00.000Z)"'})
+        keywords = mangle(foo=Query(query=(day, day + 7), operator='or'))
         self.assertEqual(keywords, {'foo':
             '"(1972-05-11T00:00:00.000Z OR 1972-05-18T00:00:00.000Z)"'})
 
@@ -95,11 +118,21 @@ class PathManglerTests(TestCase):
         keywords = mangle(path=dict(query='/foo'))
         self.assertEqual(keywords, {'parentPaths': '/foo'})
 
+    def testSimplePathQueryAsObject(self):
+        keywords = mangle(path=Query(query='/foo'))
+        self.assertEqual(keywords, {'parentPaths': '/foo'})
+
     def testPathQueryWithLevel(self):
         keywords = mangle(path=dict(query='/foo', depth=0))
         self.assertEqual(keywords, {'parentPaths': '/foo',
             'physicalDepth': '"[* TO 2]"'})
+        keywords = mangle(path=Query(query='/foo', depth=0))
+        self.assertEqual(keywords, {'parentPaths': '/foo',
+            'physicalDepth': '"[* TO 2]"'})
         keywords = mangle(path=dict(query='/foo', depth=2))
+        self.assertEqual(keywords, {'parentPaths': '/foo',
+            'physicalDepth': '"[* TO 4]"'})
+        keywords = mangle(path=Query(query='/foo', depth=2))
         self.assertEqual(keywords, {'parentPaths': '/foo',
             'physicalDepth': '"[* TO 4]"'})
 
